<resources>
    <string name="app_name">18FOTCA11037</string>
    <string name="rajkot">Rajkot</string>
    <string name="male">Male</string>
    <string name="pshingala785_rku_ac_in">pshingala785@rku.ac.in</string>
    <string name="shingala">Shingala</string>
    <string name="sureshbhai">Sureshbhai</string>
    <string name="parth">Parth</string>
    <string name="_18fotca11037">18FOTCA11037</string>
    <string name="todo">TODO</string>
    <string name="about_us">About Us</string>
    <string name="string_about_us" />
    <string name="password">Password</string>
</resources>